--- a/classes/BotMessage.cls
+++ b/classes/BotMessage.cls
@@ -9,7 +9,7 @@ public virtual class BotMessage {
 
     public BotMessage() {
     }
-
+//Check Test Comment
     public BotMessage(String author, String messageText) {
         this.author = author;
         this.messageText = messageText;
